# public-data-analysis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  decisions.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: security.py  sessions.py
backend/app/routers/: admin.py  analysis.py  auth.py  datasets.py  sessions.py
backend/app/schemas/: analysis.py  auth.py  datasets.py
backend/app/services/: ai.py  allowlist.py  analysis.py  dataset_search.py  datastore.py  http_client.py  sandbox.py  session_store.py  source_index.py  user_store.py
backend/app/services/sources/: base.py  bls.py  cdc_places.py  census.py  cfpb.py  chicago_health_atlas.py  clinicaltrials.py  cmap.py  cms.py  datagov.py  eia.py  epa_ghgrp.py  fdic.py  federal_register.py  fred.py  harvard_dataverse.py  hud.py  huggingface.py  kaggle_source.py  oecd.py  openfda.py  owid.py  sdohplace.py  sec_edgar.py  usaspending.py  vdem.py  worldbank.py
backend/tests/: test_admin.py  test_analysis.py  test_auth.py  test_datasets.py  test_search_stress.py  test_source_cache.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  DataQualityReport.tsx  DatasetCard.tsx  DatasetSidebar.tsx  PlotlyChart.tsx  ProtectedRoute.tsx  ReplPanel.tsx  SessionHistory.tsx  UploadModal.tsx
frontend/src/hooks/: useAuth.ts  useAuth.tsx
scripts/: audit.sh  dev.sh  lint.sh
(+3 files in other folders)
