[project]
name = "public-data-analysis"
version = "0.1.0"
description = "AI-powered public data analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pyjwt>=2.12.0",
    "pwdlib[argon2]>=0.2.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "openai>=1.50.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "duckdb>=1.1.0",
    "plotly>=5.24.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "RestrictedPython>=7.0",
    "scikit-learn>=1.5.0",
    "openpyxl>=3.1.0",
    "kagglehub>=0.3.0",
    "azure-data-tables>=12.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "N"]
ignore = [
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "S104",   # possible-binding-to-all-interfaces
    "S608",   # SQL injection — DuckDB queries use sanitized table names, not user input
    "S110",   # try-except-pass — acceptable in cleanup code
    "S112",   # try-except-continue — acceptable in iteration code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert allowed in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
